# pyfixy.nvim

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
lua/pyfixy/: init.lua
plugin/: pyfixy.lua
scripts/: install.sh
src/: lib.rs  main.rs
tests/: lsp.rs
